<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <!-- Signature de l'auteur -->
    <TextView
        android:id="@+id/txtSignature_mouad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature_mouad"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:paddingBottom="24dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtStatus_mouad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_ready_mouad"
        android:textSize="16sp"
        android:paddingBottom="12dp"/>

    <ProgressBar
        android:id="@+id/progressBar_mouad"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/img_mouad"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/image_desc_mouad"/>

    <Button
        android:id="@+id/btnLoadThread_mouad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_thread_mouad"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnCalcAsync_mouad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_async_mouad"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnToast_mouad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_toast_mouad"
        android:layout_marginTop="8dp"/>

</LinearLayout>
